llvm/dev/intmethod.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intmethod.llvm:13:1: error: expected instruction opcode
}
^
